--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.0",
     "jsonfile": "^5.0.0",
     "morgan": "~1.9.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "tunnel": "0.0.6"
   }
 }
